# orbital-propagator

./: CMakeLists.txt  test.cpp
include/: anomaly.h  stumpff.h
matlab/: calc_semimajor.m  calculate_univ_anomaly.m  orbital_ode_f.m  propagate_orbit.m  propagate_orbit_ode.m  propagate_state_vec.m  stumpff_c_iter.m  stumpff_c_trig.m  stumpff_s_iter.m  stumpff_s_trig.m
src/: anomaly.c  stumpff.c
